for #941 - updated clarat_base and adjusted seeds, fixtures, factory and locale entries () accordingly
TODO: change entries in localeapp (not yet possibly due to possibly
earlier deploys)

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -873,7 +873,7 @@ ar:
           target_audience:
             acquaintances: للمعارف والأقارب
             children: للأطفال والشباب
-            family_acquaintances: من أجل المعارف والأقارب
+            family_relatives: من أجل المعارف والأقارب
             family_children: للأطفال والشبان
             family_nuclear_family: للأسر
             family_parents: للآباء
